--- a/resources/language/resource.language.hr_hr/strings.po
+++ b/resources/language/resource.language.hr_hr/strings.po
@@ -10,7 +10,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.3\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -296,6 +296,18 @@ msgctxt "#30733"
 msgid "Home Lists"
 msgstr "Popisi raznih vrsta"
 
+msgctxt "#30734"
+msgid "New search"
+msgstr "Nova pretraga"
+
+msgctxt "#30735"
+msgid "Clear search history"
+msgstr "Poništi povijest pretraživanja"
+
+msgctxt "#30736"
+msgid "Remove"
+msgstr "Ukloni"
+
 msgctxt "#30650"
 msgid "Language"
 msgstr "Jezik"
@@ -318,7 +330,7 @@ msgstr "Uvijek koristite izvorne naslove"
 
 msgctxt "#30653"
 msgid "Inject subtitles"
-msgstr "Titlovi"
+msgstr "Ubaci titlove"
 
 msgctxt "#30670"
 msgid "Expert"
@@ -326,7 +338,7 @@ msgstr "Stručnjak"
 
 msgctxt "#30671"
 msgid "Force scraper friendly titles"
-msgstr "Prisiliti naslove prikladne za brisanje"
+msgstr "Forsiraj naslove prikladne za izvoz"
 
 msgctxt "#30672"
 msgid "Use generic video media type in listings"
@@ -405,3 +417,15 @@ msgstr "Postavljeno kao ne-gledano na HBO Go"
 msgctxt "#30805"
 msgid "Ignore Kodi Watched status (Only display HBO Go Watched status)"
 msgstr "Zanemari Kodi status gledanja (samo prikazati HBO Go status)"
+
+msgctxt "#30806"
+msgid "Cache"
+msgstr "Cache"
+
+msgctxt "#30807"
+msgid "Use request cache"
+msgstr "Uključi cache"
+
+msgctxt "#30808"
+msgid "Clear request cache"
+msgstr "Poništi cache"
