Translated latest strings to Romanian
Updated translation with the latest strings

--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -72,8 +72,8 @@ msgid ""
 "UNOFFICIAL ADD-ON AND HAVE NO OFFICIAL SUPPORT! COMMUNITY HELP CAN BE FOUND "
 "ON THE ADD-ON GITHUB PAGE OR KODI FORUM"
 msgstr ""
-"VĂ RUGĂM SĂ NU CONTACTAȚI OPERATORUL DUMNEAVOASTRĂ ÎN LEGĂTURĂ CU ACEST ADD-"
-"ON, ESTE UN ADD-ON NEOFICIAL ȘI NU ARE SUPORT OFICIAL! PUTEȚI OBȚINE AJUTOR "
+"VĂ RUGĂM SĂ NU CONTACTAȚI OPERATORUL DUMNEAVOASTRĂ ÎN LEGĂTURĂ CU ACEST ADD-ON,"
+"ESTE UN ADD-ON NEOFICIAL ȘI NU ARE SUPORT OFICIAL! PUTEȚI OBȚINE AJUTOR "
 "DIN PARTEA COMUNITĂȚII PE PAGINA GITHUB A ADD-ON-ULUI SAU TOPICUL DE PE "
 "FORUMUL KODI"
 
@@ -312,15 +312,15 @@ msgstr "Liste de bază"
 
 msgctxt "#30734"
 msgid "New search"
-msgstr ""
+msgstr "Căutare nouă"
 
 msgctxt "#30735"
 msgid "Clear search history"
-msgstr ""
+msgstr "Șterge istoricul de căutare"
 
 msgctxt "#30736"
 msgid "Remove"
-msgstr ""
+msgstr "Elimină"
 
 msgctxt "#30650"
 msgid "Language"
@@ -356,7 +356,7 @@ msgstr "Forțează nume prietenoase pentru titluri"
 
 msgctxt "#30672"
 msgid "Use generic video media type in listings"
-msgstr ""
+msgstr "Folosește un tip generic pentru video în listări"
 
 msgctxt "#30680"
 msgid "Session"
@@ -436,12 +436,12 @@ msgstr ""
 
 msgctxt "#30806"
 msgid "Cache"
-msgstr ""
+msgstr "Memorie cache/stocare locală"
 
 msgctxt "#30807"
 msgid "Use request cache"
-msgstr ""
+msgstr "Stocați local cererile"
 
 msgctxt "#30808"
 msgid "Clear request cache"
-msgstr ""
+msgstr "Ștergeți cererile stocate local "
