--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-10 11:06+0100\n"
-"Last-Translator: arvvoid\n"
+"PO-Revision-Date: 2020-02-09 21:19+0100\n"
+"Last-Translator: Ajnasz <ajnasz@ajnasz.hu>\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#30000"
@@ -301,15 +301,15 @@ msgstr "Főmenü listák"
 
 msgctxt "#30734"
 msgid "New search"
-msgstr ""
+msgstr "Új keresés"
 
 msgctxt "#30735"
 msgid "Clear search history"
-msgstr ""
+msgstr "Keresési előzmények törlése"
 
 msgctxt "#30736"
 msgid "Remove"
-msgstr ""
+msgstr "Eltávolítás"
 
 msgctxt "#30650"
 msgid "Language"
@@ -345,7 +345,7 @@ msgstr "Keresőbarát címek kényszerítése"
 
 msgctxt "#30672"
 msgid "Use generic video media type in listings"
-msgstr ""
+msgstr "Általános videó használata a listákban"
 
 msgctxt "#30680"
 msgid "Session"
@@ -423,12 +423,12 @@ msgstr ""
 
 msgctxt "#30806"
 msgid "Cache"
-msgstr ""
+msgstr "Gyorsítótár"
 
 msgctxt "#30807"
 msgid "Use request cache"
-msgstr ""
+msgstr "Lekérések gyorsítótárazása"
 
 msgctxt "#30808"
 msgid "Clear request cache"
-msgstr ""
+msgstr "Lekérések gyorsítótárának ürítése"
