--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-08 00:18+0100\n"
+"PO-Revision-Date: 2020-02-10 11:06+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
@@ -34,15 +34,15 @@ msgid "An unexpected error has occurred."
 msgstr "Váratlan hiba történt."
 
 msgctxt "#30005"
-msgid "Error getting content from Hbo go"
+msgid "Error getting content from Hbo Go"
 msgstr "Nem sikerült a tartalmat beolvasni az HBO Go-ból"
 
 msgctxt "#30006"
-msgid "Error sending data to Hbo go"
+msgid "Error sending data to Hbo Go"
 msgstr "Nem sikerült az adatküldés az HBO Go-nak"
 
 msgctxt "#30007"
-msgid "Error deleting data from Hbo go"
+msgid "Error deleting data from Hbo Go"
 msgstr "Nem sikerült az adattörlés az HBO Go-ból"
 
 msgctxt "#30008"
