--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-08 00:17+0100\n"
+"PO-Revision-Date: 2020-02-10 10:52+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
@@ -38,16 +38,16 @@ msgid "An unexpected error has occurred."
 msgstr "Se ha producido un error inesperado."
 
 msgctxt "#30005"
-msgid "Error getting content from Hbo go"
-msgstr "Error al obtener contenido de Hbo go"
+msgid "Error getting content from Hbo Go"
+msgstr "Error al obtener contenido de HBO Go"
 
 msgctxt "#30006"
-msgid "Error sending data to Hbo go"
-msgstr "Error al enviar datos a Hbo go"
+msgid "Error sending data to Hbo Go"
+msgstr "Error al enviar datos a HBO Go"
 
 msgctxt "#30007"
-msgid "Error deleting data from Hbo go"
-msgstr "Error al eliminar datos de Hbo go"
+msgid "Error deleting data from Hbo Go"
+msgstr "Error al eliminar datos de HBO Go"
 
 msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
@@ -309,15 +309,15 @@ msgstr "Listas iniciales"
 
 msgctxt "#30734"
 msgid "New search"
-msgstr ""
+msgstr "Nueva búsqueda"
 
 msgctxt "#30735"
 msgid "Clear search history"
-msgstr ""
+msgstr "Borrar historial de búsqueda"
 
 msgctxt "#30736"
 msgid "Remove"
-msgstr ""
+msgstr "Eliminar"
 
 msgctxt "#30650"
 msgid "Language"
@@ -353,7 +353,7 @@ msgstr "Forzar títulos amigables a los extractores (scrapers)"
 
 msgctxt "#30672"
 msgid "Use generic video media type in listings"
-msgstr ""
+msgstr "Usar tipo de medios de vídeo genérico en listados"
 
 msgctxt "#30680"
 msgid "Session"
@@ -435,12 +435,12 @@ msgstr ""
 
 msgctxt "#30806"
 msgid "Cache"
-msgstr ""
+msgstr "Caché"
 
 msgctxt "#30807"
 msgid "Use request cache"
-msgstr ""
+msgstr "Usar caché de peticiones"
 
 msgctxt "#30808"
 msgid "Clear request cache"
-msgstr ""
+msgstr "Borrar caché de peticiones"
