--- a/resources/language/resource.language.sl_si/strings.po
+++ b/resources/language/resource.language.sl_si/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-08 00:22+0100\n"
+"PO-Revision-Date: 2020-02-10 11:10+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: sl_SI\n"
@@ -44,18 +44,18 @@ msgstr "Prišlo je do nepričakovane napake."
 
 #, fuzzy
 msgctxt "#30005"
-msgid "Error getting content from Hbo go"
-msgstr "Napaka pri pridobivanju vsebine iz HBO go"
+msgid "Error getting content from Hbo Go"
+msgstr "Napaka pri pridobivanju vsebine iz HBO Go"
 
 #, fuzzy
 msgctxt "#30006"
-msgid "Error sending data to Hbo go"
-msgstr "Napaka pri pošiljanju podatkov v HBO go"
+msgid "Error sending data to Hbo Go"
+msgstr "Napaka pri pošiljanju podatkov v HBO Go"
 
 #, fuzzy
 msgctxt "#30007"
-msgid "Error deleting data from Hbo go"
-msgstr "Napaka pri brisanju podatkov iz HBO go"
+msgid "Error deleting data from Hbo Go"
+msgstr "Napaka pri brisanju podatkov iz HBO Go"
 
 #, fuzzy
 msgctxt "#30008"
