Detect not available content before attempt play (show dialog when the content will be available)

--- a/resources/language/resource.language.cz_cz/strings.po
+++ b/resources/language/resource.language.cz_cz/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-10 10:51+0100\n"
+"PO-Revision-Date: 2020-02-13 00:55+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: cz_CZ\n"
@@ -52,6 +52,10 @@ msgstr "Chyba při mazání dat z Hbo Go"
 msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
 msgstr "Komunikační chyba, návratový STATUS: "
+
+msgctxt "#30009"
+msgid "The content is availible from:"
+msgstr ""
 
 msgctxt "#30100"
 msgid "Web registration on "
