--- a/resources/language/resource.language.bg_bg/strings.po
+++ b/resources/language/resource.language.bg_bg/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-10 10:50+0100\n"
+"PO-Revision-Date: 2020-02-13 00:54+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: bg_BG\n"
@@ -58,6 +58,10 @@ msgstr "Грешка при изтриване на данни от НВО Go"
 msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
 msgstr "Съобщение за грешка, върната състояние:"
+
+msgctxt "#30009"
+msgid "The content is availible from:"
+msgstr ""
 
 msgctxt "#30100"
 msgid "Web registration on "
