--- a/resources/language/resource.language.da_dk/strings.po
+++ b/resources/language/resource.language.da_dk/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-10 10:52+0100\n"
+"PO-Revision-Date: 2020-02-13 00:55+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: da_DK\n"
@@ -60,6 +60,10 @@ msgstr "Fejl ved sletning af data fra HBO Go"
 msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
 msgstr "Kommunikationsfejl, returneret STATUS:"
+
+msgctxt "#30009"
+msgid "The content is availible from:"
+msgstr ""
 
 #, fuzzy
 msgctxt "#30100"
