--- a/resources/language/resource.language.nb_no/strings.po
+++ b/resources/language/resource.language.nb_no/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-10 11:06+0100\n"
+"PO-Revision-Date: 2020-02-13 00:56+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: nb_NO\n"
@@ -59,6 +59,10 @@ msgstr "Feil ved sletting av data fra HBO Go"
 msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
 msgstr "Kommunikasjonsfeil, returnert STATUS: "
+
+msgctxt "#30009"
+msgid "The content is availible from:"
+msgstr ""
 
 #, fuzzy
 msgctxt "#30100"
