--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-10 11:07+0100\n"
+"PO-Revision-Date: 2020-02-13 00:57+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid, kowalmisiek\n"
 "Language: pl_PL\n"
@@ -59,6 +59,10 @@ msgstr "Błąd podczas usuwania danych z HBO Go"
 msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
 msgstr "Błąd komunikacji, zwrócony STATUS: "
+
+msgctxt "#30009"
+msgid "The content is availible from:"
+msgstr ""
 
 msgctxt "#30100"
 msgid "Web registration on "
