--- a/resources/language/resource.language.sr_rs@latin/strings.po
+++ b/resources/language/resource.language.sr_rs@latin/strings.po
@@ -50,6 +50,10 @@ msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
 msgstr "Greška u komunikaciji, vraćeni STATUS: "
 
+msgctxt "#30009"
+msgid "The content is availible from:"
+msgstr ""
+
 msgctxt "#30100"
 msgid "Web registration on "
 msgstr "Web Registracija na "
