If not currently available, show available from date and time in plot, minor fixes

--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -54,7 +54,7 @@ msgid "Communication error, returned STATUS: "
 msgstr ""
 
 msgctxt "#30009"
-msgid "The content is availible from:"
+msgid "The content is available from:"
 msgstr ""
 
 msgctxt "#30100"
