--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-13 00:55+0100\n"
-"Last-Translator: arvvoid\n"
+"PO-Revision-Date: 2020-02-18 18:22+0100\n"
+"Last-Translator: J.M. Pongilioni ('boblo1') <djinn2k2@gmail.com>\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +55,7 @@ msgstr "Error de comunicación, estado devuelto: "
 
 msgctxt "#30009"
 msgid "The content is availible from:"
-msgstr ""
+msgstr "El contenido está disponible desde:"
 
 msgctxt "#30100"
 msgid "Web registration on "
