--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-13 00:55+0100\n"
-"Last-Translator: arvvoid\n"
-"Language-Team: arvvoid\n"
+"PO-Revision-Date: 2020-02-20 18:44+0200\n"
+"Last-Translator: jumakki\n"
+"Language-Team: jumakki\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.0.6\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -25,17 +25,14 @@ msgctxt "#30001"
 msgid "ERROR"
 msgstr "VIRHE"
 
-#, fuzzy
 msgctxt "#30002"
 msgid "Setup failed"
 msgstr "Asennus epäonnistui"
 
-#, fuzzy
 msgctxt "#30003"
 msgid "Unsupported region"
 msgstr "Aluetta ei tueta"
 
-#, fuzzy
 msgctxt "#30004"
 msgid "An unexpected error has occurred."
 msgstr "Ilmeni odottamaton virhe."
@@ -54,11 +51,11 @@ msgstr "Virhe poistettaessa tietoja HBO GO -palvelusta"
 
 msgctxt "#30008"
 msgid "Communication error, returned STATUS: "
-msgstr "Tiedonsiirtovirhe, palautettu tila:"
+msgstr "Tiedonsiirtovirhe, palautettu tila: "
 
 msgctxt "#30009"
 msgid "The content is availible from:"
-msgstr ""
+msgstr "Sisältö ei ole saatavilla ennen:"
 
 msgctxt "#30100"
 msgid "Web registration on "
