--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-13 00:56+0100\n"
-"Last-Translator: arvvoid\n"
+"PO-Revision-Date: 2020-02-20 21:59+0100\n"
+"Last-Translator: Ajnasz <ajnasz@ajnasz.hu>\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#30000"
@@ -51,7 +51,7 @@ msgstr "Kommunikációs hiba, visszaadott állapot: "
 
 msgctxt "#30009"
 msgid "The content is availible from:"
-msgstr ""
+msgstr "A tartalom elérhető:"
 
 msgctxt "#30100"
 msgid "Web registration on "
