Update typo fix in english text

--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -50,7 +50,7 @@ msgid "Communication error, returned STATUS: "
 msgstr "Kommunikációs hiba, visszaadott állapot: "
 
 msgctxt "#30009"
-msgid "The content is availible from:"
+msgid "The content is available from:"
 msgstr "A tartalom elérhető:"
 
 msgctxt "#30100"
