--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-18 18:22+0100\n"
-"Last-Translator: J.M. Pongilioni ('boblo1') <djinn2k2@gmail.com>\n"
+"PO-Revision-Date: 2020-02-20 22:24+0100\n"
+"Last-Translator: arvvoid\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
@@ -54,7 +54,7 @@ msgid "Communication error, returned STATUS: "
 msgstr "Error de comunicación, estado devuelto: "
 
 msgctxt "#30009"
-msgid "The content is availible from:"
+msgid "The content is available from:"
 msgstr "El contenido está disponible desde:"
 
 msgctxt "#30100"
