--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-20 18:44+0200\n"
-"Last-Translator: jumakki\n"
+"PO-Revision-Date: 2020-02-20 22:25+0100\n"
+"Last-Translator: arvvoid\n"
 "Language-Team: jumakki\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.3\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -54,7 +54,7 @@ msgid "Communication error, returned STATUS: "
 msgstr "Tiedonsiirtovirhe, palautettu tila: "
 
 msgctxt "#30009"
-msgid "The content is availible from:"
+msgid "The content is available from:"
 msgstr "Sisältö ei ole saatavilla ennen:"
 
 msgctxt "#30100"
