--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-13 00:56+0100\n"
+"PO-Revision-Date: 2020-02-20 22:29+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
@@ -50,7 +50,7 @@ msgid "Communication error, returned STATUS: "
 msgstr "Kommunikációs hiba, visszaadott állapot: "
 
 msgctxt "#30009"
-msgid "The content is availible from:"
+msgid "The content is available from:"
 msgstr ""
 
 msgctxt "#30100"
