Enforce Kids mode, version bump 2.4.1

--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -298,6 +298,10 @@ msgctxt "#30736"
 msgid "Remove"
 msgstr ""
 
+msgctxt "#30737"
+msgid "Kids only mode"
+msgstr ""
+
 msgctxt "#30650"
 msgid "Language"
 msgstr ""
