--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-20 22:24+0100\n"
+"PO-Revision-Date: 2020-03-17 14:29+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
@@ -322,6 +322,11 @@ msgstr "Borrar historial de búsqueda"
 msgctxt "#30736"
 msgid "Remove"
 msgstr "Eliminar"
+
+#, fuzzy
+msgctxt "#30737"
+msgid "Kids only mode"
+msgstr "Modo solo para niños"
 
 msgctxt "#30650"
 msgid "Language"
