--- a/resources/language/resource.language.sl_si/strings.po
+++ b/resources/language/resource.language.sl_si/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-02-20 22:34+0100\n"
+"PO-Revision-Date: 2020-03-17 14:33+0100\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: arvvoid\n"
 "Language: sl_SI\n"
@@ -368,6 +368,10 @@ msgstr ""
 
 msgctxt "#30736"
 msgid "Remove"
+msgstr ""
+
+msgctxt "#30737"
+msgid "Kids only mode"
 msgstr ""
 
 msgctxt "#30650"
