--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-03-22 20:45+0001\n"
-"Last-Translator: J.M. Pongilioni ('boblo1') <djinn2k2@gmail.com>\n"
+"PO-Revision-Date: 2020-04-12 18:16+0200\n"
+"Last-Translator: arvvoid\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
@@ -452,3 +452,35 @@ msgstr "Usar caché de peticiones"
 msgctxt "#30808"
 msgid "Clear request cache"
 msgstr "Borrar caché de peticiones"
+
+msgctxt "#30809"
+msgid "Encrypt credentials"
+msgstr ""
+
+msgctxt "#30810"
+msgid ""
+"If you don't know why the option is disabled don't input credentials and "
+"exit now!\n"
+"\n"
+"If you disabled the option on purpose and know exactly why then please "
+"continue.\n"
+"\n"
+"If this is not intended for debugging/testing or because you experience "
+"problems with lost credentials on the device please do NOT continue.\n"
+"In case this is not intended, enable the credentials encryption option and "
+"simply try again.\n"
+"\n"
+"This message will appear only now on credential input."
+msgstr ""
+
+msgctxt "#30811"
+msgid "[Encrypted]"
+msgstr ""
+
+msgctxt "#30812"
+msgid "[NOT Encrypted]"
+msgstr ""
+
+msgctxt "#30813"
+msgid "WARNING: Credential Encryption disabled"
+msgstr ""
