--- a/resources/language/resource.language.hu_hu/strings.po
+++ b/resources/language/resource.language.hu_hu/strings.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: hbogo kodi addon\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-03-18 08:48+0100\n"
-"Last-Translator: Ajnasz <ajnasz@ajnasz.hu>\n"
+"PO-Revision-Date: 2020-04-12 18:17+0200\n"
+"Last-Translator: arvvoid\n"
 "Language-Team: \n"
 "Language: hu_HU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.3\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "#30000"
@@ -440,3 +440,35 @@ msgstr "Lekérések gyorsítótárazása"
 msgctxt "#30808"
 msgid "Clear request cache"
 msgstr "Lekérések gyorsítótárának ürítése"
+
+msgctxt "#30809"
+msgid "Encrypt credentials"
+msgstr ""
+
+msgctxt "#30810"
+msgid ""
+"If you don't know why the option is disabled don't input credentials and "
+"exit now!\n"
+"\n"
+"If you disabled the option on purpose and know exactly why then please "
+"continue.\n"
+"\n"
+"If this is not intended for debugging/testing or because you experience "
+"problems with lost credentials on the device please do NOT continue.\n"
+"In case this is not intended, enable the credentials encryption option and "
+"simply try again.\n"
+"\n"
+"This message will appear only now on credential input."
+msgstr ""
+
+msgctxt "#30811"
+msgid "[Encrypted]"
+msgstr ""
+
+msgctxt "#30812"
+msgid "[NOT Encrypted]"
+msgstr ""
+
+msgctxt "#30813"
+msgid "WARNING: Credential Encryption disabled"
+msgstr ""
