Update translation for cs_cz, es_es, fi_fi

--- a/resources/language/resource.language.es_es/strings.po
+++ b/resources/language/resource.language.es_es/strings.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-04-12 18:16+0200\n"
-"Last-Translator: arvvoid\n"
+"PO-Revision-Date: 2020-04-16 16:20+0100\n"
+"Last-Translator: J.M. Pongilioni ('boblo1') <djinn2k2@gmail.com>\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
@@ -455,7 +455,7 @@ msgstr "Borrar caché de peticiones"
 
 msgctxt "#30809"
 msgid "Encrypt credentials"
-msgstr ""
+msgstr "Cifrar credenciales"
 
 msgctxt "#30810"
 msgid ""
@@ -472,15 +472,28 @@ msgid ""
 "\n"
 "This message will appear only now on credential input."
 msgstr ""
+"Si no sabes por qué la opción está deshabilitada, ¡no introduzcas las "
+"credenciales y sal ahora!\n"
+"\n"
+"Si desactivaste la opción a propósito y sabes exactamente el porqué, "
+"entonces continúa, por favor.\n"
+"\n"
+"Si esta acción no tiene como objetivo depurar/probar o se debe a que "
+"experimentas problemas con credenciales perdidas en el dispositivo, por "
+"favor, NO continúes.\n"
+"En el caso de que esto no se desee, habilita la opción para cifrar las "
+"credenciales e inténtalo de nuevo.\n"
+"\n"
+"Este mensaje sólo aparecerá ahora, al introducir las credenciales."
 
 msgctxt "#30811"
 msgid "[Encrypted]"
-msgstr ""
+msgstr "[Cifrado]"
 
 msgctxt "#30812"
 msgid "[NOT Encrypted]"
-msgstr ""
+msgstr "[NO cifrado]"
 
 msgctxt "#30813"
 msgid "WARNING: Credential Encryption disabled"
-msgstr ""
+msgstr "AVISO: Cifrado de credenciales deshabilitado"
