--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: plugin.video.hbogoeu\n"
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2020-04-12 18:17+0200\n"
+"PO-Revision-Date: 2020-04-16 17:35+0300\n"
 "Last-Translator: arvvoid\n"
 "Language-Team: jumakki\n"
 "Language: fi_FI\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 2.0.6\n"
 
 msgctxt "#30000"
 msgid "ENG"
@@ -447,7 +447,7 @@ msgstr "Tyhjennä välimuisti"
 
 msgctxt "#30809"
 msgid "Encrypt credentials"
-msgstr ""
+msgstr "Käyttäjätunnusten salaus"
 
 msgctxt "#30810"
 msgid ""
@@ -464,15 +464,27 @@ msgid ""
 "\n"
 "This message will appear only now on credential input."
 msgstr ""
+"Jos et tiedä miksi käyttäjätunnusten salaus ei ole päällä, älä syötä "
+"käyttäjätunnuksia ja poistu heti!\n"
+"\n"
+"Jos poistit salauksen tarkoituksella ja tietät tarkalleen miksi, ole hyvä ja "
+"jatka.\n"
+"\n"
+"Jos tarkoitus ei ole debuggaus/testaus tai käyttäjätunnusten katoamisen "
+"selvittäminen, ole hyvä ja ÄLÄ jatka.\n"
+"Jos et poistanut salausta tarkoituksella, laita salaus takaisin päälle ja "
+"yritä uudelleen.\n"
+"\n"
+"Tämä viesti näkyy vain tämän kerran käyttäjätunnuksia syötettäessä."
 
 msgctxt "#30811"
 msgid "[Encrypted]"
-msgstr ""
+msgstr "[Salattu]"
 
 msgctxt "#30812"
 msgid "[NOT Encrypted]"
-msgstr ""
+msgstr "[EI salattu]"
 
 msgctxt "#30813"
 msgid "WARNING: Credential Encryption disabled"
-msgstr ""
+msgstr "VAROITUS: Käyttäjätunnusten salaus ei ole päällä"
