--- a/resources/language/resource.language.ro_ro/strings.po
+++ b/resources/language/resource.language.ro_ro/strings.po
@@ -489,3 +489,11 @@ msgstr "[Ne-criptat]"
 msgctxt "#30813"
 msgid "WARNING: Credential Encryption disabled"
 msgstr "ATENȚIE: Codificarea datelor de autentificare dezactivată"
+
+msgctxt "#30814"
+msgid "Subtitles cache cleaned"
+msgstr ""
+
+msgctxt "#30815"
+msgid "Clean subtitles cache"
+msgstr ""
