--- a/resources/language/resource.language.sk_sk/strings.po
+++ b/resources/language/resource.language.sk_sk/strings.po
@@ -481,3 +481,11 @@ msgstr "[NEšifrované]"
 msgctxt "#30813"
 msgid "WARNING: Credential Encryption disabled"
 msgstr "VAROVANIE: Šifrovanie poverenia zakázané"
+
+msgctxt "#30814"
+msgid "Subtitles cache cleaned"
+msgstr ""
+
+msgctxt "#30815"
+msgid "Clean subtitles cache"
+msgstr ""
