--- a/resources/language/resource.language.fi_fi/strings.po
+++ b/resources/language/resource.language.fi_fi/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2020-12-14 17:25+0200\n"
-"Last-Translator: arvvoid\n"
+"Last-Translator: jumakki\n"
 "Language-Team: jumakki\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
