sk_SK translation by @durip

--- a/resources/language/resource.language.sk_sk/strings.po
+++ b/resources/language/resource.language.sk_sk/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/arvvoid/plugin.video.hbogoeu/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2020-04-20 18:18+0200\n"
-"Last-Translator: arvvoid\n"
+"Last-Translator: durip\n"
 "Language-Team: durip\n"
 "Language: sk_SK\n"
 "MIME-Version: 1.0\n"
@@ -484,8 +484,8 @@ msgstr "VAROVANIE: Šifrovanie poverenia zakázané"
 
 msgctxt "#30814"
 msgid "Subtitles cache cleaned"
-msgstr ""
+msgstr "Vyrovnávacia pamäť titulkov vymazaná"
 
 msgctxt "#30815"
 msgid "Clean subtitles cache"
-msgstr ""
+msgstr "Vymazať vyrovnávaciu pamäť titulkov"
