--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -306,7 +306,7 @@ msgstr "Oglądaj dalej"
 
 msgctxt "#30733"
 msgid "Home Lists"
-msgstr ""
+msgstr "Moje Listy"
 
 msgctxt "#30734"
 msgid "New search"
@@ -358,7 +358,7 @@ msgstr "Wymuś użycie scrapera z przyjaznymi tytułami"
 
 msgctxt "#30672"
 msgid "Use generic video media type in listings"
-msgstr ""
+msgstr "Używaj ogólnych typów mediów w listach"
 
 msgctxt "#30680"
 msgid "Session"
@@ -374,7 +374,7 @@ msgstr "Zresetuj sesję, wymuś ponowne logowanie"
 
 msgctxt "#30690"
 msgid "Debug"
-msgstr "Debug"
+msgstr "Debugowanie"
 
 msgctxt "#30691"
 msgid "Include sensitive login data in debug log [DON'T POST PUBLICLY]"
@@ -390,25 +390,17 @@ msgstr ""
 "Are you sure you want to completely reset your setup (device registration "
 "will be lost ) ?"
 
-#, fuzzy
-#| msgctxt "#30693"
-#| msgid "Include full details/RAW retrived data in Debug log"
 msgctxt "#30693"
 msgid "Include full details/RAW retrieved data in Debug log"
-msgstr "Include full details/RAW retrived data in Debug log"
+msgstr "Uwzględnij wszystkie szczegóły/Otrzymane dane RAW w dzienniku logowania"
 
-#, fuzzy
-#| msgctxt "#30694"
-#| msgid ""
-#| "Cryptodome dependency not present on your system, HBO go add-on can't "
-#| "run. For help consult install instructions/official support thread"
 msgctxt "#30694"
 msgid ""
 "Cryptodome dependency not present on your system, HBO Go add-on can't run. "
 "For help consult install instructions/official support thread"
 msgstr ""
-"Cryptodome dependency not present on your system, HBO go add-on can't run. "
-"For help consult install instructions/official support thread"
+"Zależność od Cryptodome nie występuje w twoim systemie, nie można uruchomić dodatku HBO Go. "
+"Aby uzyskać pomoc zapoznaj się z instrukcją instalacji/oficjalnym wątkiem wsparcia"
 
 msgctxt "#30696"
 msgid "Home Category"
@@ -416,7 +408,7 @@ msgstr "Strona główna"
 
 msgctxt "#30697"
 msgid "Group Home lists in special category"
-msgstr "Strona główna wyświetlana w kategorii specjalnej"
+msgstr "Grupuj Moje Listy w kategorii specjalnej"
 
 msgctxt "#30800"
 msgid "Sync play time with HBO Go"
@@ -444,19 +436,19 @@ msgstr "Ignoruj status oglądanych w Kodi (wyświetlanie tylko statusu HBO)"
 
 msgctxt "#30806"
 msgid "Cache"
-msgstr ""
+msgstr "Cache"
 
 msgctxt "#30807"
 msgid "Use request cache"
-msgstr ""
+msgstr "Użyj żądania cache"
 
 msgctxt "#30808"
 msgid "Clear request cache"
-msgstr ""
+msgstr "Wyczyść żądanie cache"
 
 msgctxt "#30809"
 msgid "Encrypt credentials"
-msgstr ""
+msgstr "Szyfruj dane uwierzytelniające"
 
 msgctxt "#30810"
 msgid ""
@@ -473,6 +465,17 @@ msgid ""
 "\n"
 "This message will appear only now on credential input."
 msgstr ""
+"Jeśli nie wiesz czemu szyfrowanie jest nieaktywna, nie podawaj danych logowania i "
+"wyjdź teraz !\n "
+"\n"
+"Jeśli wyłączyłeś szyfrowanie celowo i wiesz co robisz, kontynuuj.\n "
+"\n"
+"Jeśli szyfrowanie nie zostało wyłączone w celu debugowania/testowania, "
+"albo z powodu problemów z utraconymi danymi logowania na urządzeniu, NIE kontynuuj.\n "
+"W przypadku jeśli nie jest to zamierzone, aktywuj opcję szyfrowania danych logowania i "
+"spróbuj ponownie.\n"
+"\n"
+"Ta wiadomość pojawi się tylko podczas wprowadzania danych."
 
 msgctxt "#30811"
 msgid "[Encrypted]"
